Feat: Updated files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,8 @@ set(SOURCES
         includes/Math/Vectors.hpp
         src/Rendering/Camera.cpp
         includes/Rendering/Camera.hpp
-        includes/Math/Matrix.hpp
-        src/Tools/Math/Matrix.cpp
+        includes/Math/Matrix4x4.hpp
+        src/Tools/Math/Matrix4x4.cpp
 )
 
 add_executable(starmans_odyssey ${SOURCES})
