--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -10,8 +10,17 @@ jobs:
       - name: Download dependencies
         run: |
           sudo apt update
-          sudo apt install -y libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libsdl2-mixer-dev \
-          libgl1-mesa-dev libglu1-mesa-dev
+          sudo apt install -y \
+            cmake \
+            g++ \
+            libglfw3-dev \
+            libglew-dev \
+            libglm-dev \
+            libgl1-mesa-dev \
+            libxrandr-dev \
+            libxinerama-dev \
+            libxcursor-dev \
+            libxi-dev
       - name: Configure cmake
         run: cmake -B build
       - name: Build
